--- a/home/styles.css
+++ b/home/styles.css
@@ -1,34 +1,3 @@
 body {
-    margin: 0;
-    padding: 0;
-}
-.container {
-    display: flex;
-    justify-content:center;
-    align-items:center;
-}
-.banner {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height:80vh;
-    width: 100vw;
-}
-.box {
-    width: 400px;height: 400px;
-    background-color:red;
-    transition: all .2s;
-}
-.hover_demo {
-    background-color:green;
-    margin-bottom: 50px;
-}
-.hover_demo:hover .box{
-    background-color: orange
-}
-.toTop {
-    position:fixed;
-    bottom: 10vh;
-    right: 10vw;
-    display:none;
+    background-color:red
 }
